
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* shellNAME; int size; } ;


 int print (char*) ;
 int printf (char*,char*,int,int) ;
 TYPE_1__* scode ;

void shellprint(){
            int i;
             print("Chose you shellcode(press 0 || 1)");
             for(i=0;i<2;i++)
               printf("[~]%s of %d length %d\n",scode[i].shellNAME,scode[i].size,i);
            }
